# deciphon-model

./: CMakeLists.txt  README.md  deciphon_model-config.cmake.in  install-deps
.github/workflows/: cmake.yml
include/deciphon_model/: model.h  nuclt_dist.h  profile.h  profile_typeid.h  protein_cfg.h  protein_codec.h  protein_h3reader.h  protein_model.h  protein_node.h  protein_profile.h  protein_state.h  protein_xtrans.h  standard_profile.h
include/model/: entry_dist.h  limits.h  model.h  nuclt_dist.h  profile.h  profile_types.h  protein_cfg.h  protein_h3reader.h  protein_hmmer3_reader.h  protein_model.h  protein_node.h  protein_profile.h  protein_state.h  protein_xnode.h  rc.h  standard_profile.h  standard_state.h
src/: bug.h  compiler.h  logger.c  logger.h  metadata.h  model_limits.h  nuclt_dist.c  nuclt_dist.h  profile.c  profile.h  profile_types.c  protein_cfg.h  protein_codec.c  protein_h3reader.c  protein_model.c  protein_model.h  protein_node.h  protein_profile.c  protein_profile.h  protein_state.c  protein_state.h  protein_trans.h  standard_profile.c  standard_profile.h  standard_state.c  to_str.c  to_str.h
src/model/: profile.h  protein_codec.h  rc.h  standard_profile.h
test/: CMakeLists.txt  protein_h3reader.c  protein_model.c  protein_profile.c  standard_profile.c
